--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -13,9 +13,14 @@
 				<md-button class="md-icon-button" hide-gt-sm ng-click="MainCtrl.toggleMenu()" aria-label="Menú">
 					<md-icon md-svg-icon="menu"/>
 				</md-button>
+        <!--
 				<h2>
 					<span>A la orden</span>
 				</h2>
+				-->
+        <a id="logo" href="#/home">
+          <img class="image" ng-src="assets/images/logo.png" >
+        </a>
 				<span flex>
 				</span>
 				<md-button class="md-icon-button" aria-label="Correo">
