--- a/src/app/index.css
+++ b/src/app/index.css
@@ -49,14 +49,6 @@ md-content.md-default-theme {
   background-color: #eee;
 }
 
-md-sidenav,
-md-sidenav.md-locked-open,
-md-sidenav.md-closed.md-locked-open-add-active {
-  min-width: 200px !important;
-  width: 230px !important;
-  max-width: 230px !important;
-}
-
 #logo {
   min-width: 150px;
   max-width: 25%;
@@ -64,6 +56,22 @@ md-sidenav.md-closed.md-locked-open-add-active {
 
 .image {
   width: 100%;
+}
+
+#portrait {
+  width: 100%;
+  height: 620px;
+  color: white;
+  font-size: 80px;
+  text-align: center;
+  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ),
+  url("https://drscdn.500px.org/photo/106967977/q%3D80_m%3D1500/0d4fd84ea3e840863515173406863279") center top no-repeat;
+}
+
+.center {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 #google_plus {
