/ Mejora Crear demanda + Crear oferta

--- a/src/app/create_offer/create_offer.html
+++ b/src/app/create_offer/create_offer.html
@@ -2,7 +2,7 @@
 	<md-toolbar class="md-tall md-whiteframe-4dp md-hue-1">
 		<div class="md-toolbar-tools">
 			<h2>
-				<span>Crear demanda</span>
+				<span>Crear oferta</span>
 			</h2>
 		</div>
 	</md-toolbar>
