--- a/src/app/offer/offer.html
+++ b/src/app/offer/offer.html
@@ -44,7 +44,7 @@
 		</md-card-content>
 	</md-card>
 	
-	<md-button class="md-fab md-fab-bottom-right" style="position: fixed" aria-label="FAB">
+	<md-button class="md-fab md-fab-bottom-right" style="position: fixed" aria-label="FAB" ng-click="vm.openCreateDialog($event)">
 		<md-icon md-svg-icon="add"></md-icon>
 	</md-button>
 </md-content>
