--- a/src/app/index.css
+++ b/src/app/index.css
@@ -39,6 +39,7 @@
 
 html {
   font-family: 'Roboto Slab', serif;
+  height: 100%;
 }
 
 .fill-height {
@@ -58,14 +59,17 @@ md-content.md-default-theme {
   width: 100%;
 }
 
-#portrait {
-  width: 100%;
-  height: 620px;
+#background {
+  background-image: url("/assets/images/main.jpg");
   color: white;
-  font-size: 80px;
+  font-size: 5em;
   text-align: center;
-  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ),
-  url("https://drscdn.500px.org/photo/106967977/q%3D80_m%3D1500/0d4fd84ea3e840863515173406863279") center top no-repeat;
+  height: 100%;
+  width: 100%;
+}
+
+.inLine {
+  display: inline-flex;
 }
 
 .center {
