--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -18,7 +18,7 @@
 
 			<md-input-container class="md-block">
 				<label>Contraseña</label>
-				<input ng-model="vm.userData.password">
+				<input ng-model="vm.userData.password" type="password">
 			</md-input-container>
 
 			<div flex-xs="" flex="50">
