--- a/src/app/user/user.html
+++ b/src/app/user/user.html
@@ -1,65 +1,22 @@
 ﻿<md-content>
-	<md-toolbar class="md-tall md-whiteframe-4dp md-hue-1">
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>Inicio de sesión</span>
-			</h2>
-		</div>
-	</md-toolbar>
-
-	<md-card layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
-		<md-card-content>
-      <div layout-gt-sm="row">
-        <md-input-container class="md-block" flex-gt-sm="">
-          <label>Correo</label>
-          <input ng-model="theMax">
-        </md-input-container>
+  <md-card>
+    <md-card-content>
+      <div id="userName">
+        <h2>{{vm.datosUsusario.nombre}}</h2>
       </div>
-
-      <md-input-container class="md-block" flex-gt-sm="">
-        <label>Contraseña</label>
-        <input ng-model="theMax">
-      </md-input-container>
-
-      <div flex-xs="" flex="50">
-        <md-checkbox md-no-ink="" aria-label="¿Recordarte?" ng-model="data.cb5" >
-          ¿Recordarme?
-        </md-checkbox>
+      <div id="userProfile">
+        <img height="300" width="300" ng-src="{{vm.datosUsusario.foto}}"/>
       </div>
-
-      <section layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
-        <md-button class="md-raised md-primary">Iniciar</md-button>
-      </section>
-
-      <section>
-        <md-button class="md-primary" ng-href="{{googleUrl}}" target="_blank">¿Olvido su contraseña?</md-button>
-      </section>
-
-      <section>
-        <md-button class="md-primary" ng-href="{{googleUrl}}" target="_blank">¿No tiene una cuenta?</md-button>
-      </section>
-
-      <label>O inicie sesión con:</label>
-
-      <!-- Redes sociales -->
-      <section layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
-        <md-button id="google_plus" class="md-fab" aria-label="google_plus">
-          <i class="fa fa-google-plus fa-2x"></i>
-        </md-button>
-
-        <md-button id="twitter" class="md-fab" aria-label="twitter">
-          <i class="fa fa-twitter fa-2x"></i>
-        </md-button>
-
-        <md-button id="facebook" class="md-fab" aria-label="facebook">
-          <i class="fa fa-facebook fa-2x"></i>
-        </md-button>
-
-        <md-button id="linkedin" class="md-fab" aria-label="linkedin">
-          <i class="fa fa-linkedin fa-2x"></i>
-        </md-button>
-      </section>
-		</md-card-content>
-	</md-card>
-
+      <div id="userInformation">
+        <p>
+          <h2> email:</h2>
+          <p><a ng-href="mailto:{{vm.datosUsusario.email}}">{{vm.datosUsusario.email}}</a></p>
+          <h2> Numero de celular:</h2>
+          <p>{{vm.datosUsusario.celular}}</p>
+          <h2> Genero:</h2>
+          <p>{{vm.datosUsusario.genero}}</p>
+        </p>
+      </div>
+    </md-card-content>
+  </md-card>
 </md-content>
