Cambio de ubicación de registro y mejora de plantilla

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -32,11 +32,11 @@
 			</section>
 
 			<section>
-				<md-button class="md-primary" ng-href="{{googleUrl}}" target="_blank">¿Olvido su contraseña?</md-button>
+				<md-button class="md-primary" ng-href="" target="_blank">¿Olvido su contraseña?</md-button>
 			</section>
 
 			<section>
-				<md-button class="md-primary" ng-href="{{googleUrl}}" target="_blank">¿No tiene una cuenta?</md-button>
+				<md-button class="md-primary" ng-click="vm.redirect('/register')" target="_blank">¿No tiene una cuenta?</md-button>
 			</section>
 
 			<label>O inicie sesión con:</label>
