--- a/src/app/user/viewUser.html
+++ b/src/app/user/viewUser.html
@@ -21,7 +21,7 @@
 			<md-content class="md-no-momentum">
 				<md-input-container class="md-icon-float md-block">
 					<label>Correo</label>
-					<md-icon md-svg-icon="email" md-colors="{fill: 'default-primary-700'}"></md-icon>
+					<md-icon md-svg-icon="email"></md-icon>
 					<input ng-model="vm.profile.email" type="text" readonly>
 				</md-input-container>
 				<md-input-container class="md-icon-float md-block">
@@ -45,7 +45,7 @@
 				<md-input-container class="md-icon-float md-block">
 					<label>Dirección</label>
 					<md-icon md-svg-icon="map"></md-icon>
-					<input ng-model="vm.profile.direccion" type="text" readonly>
+					<input ng-model="vm.profile.address" type="text" readonly>
 				</md-input-container>
 				<md-content>
 					<a class="input-overlay" href="">Iniciar</a>
