--- a/src/app/index.css
+++ b/src/app/index.css
@@ -122,3 +122,10 @@ md-content.md-default-theme {
     top: 20px;
 	z-index: 999;
 }
+
+
+md-input-container > md-select {
+    margin: 0;
+	margin-top: 1.5em;
+	margin-left: 2.2em;
+}
