--- a/src/app/user/registerUser.html
+++ b/src/app/user/registerUser.html
@@ -9,51 +9,64 @@
 	
 	<md-card>
 		<md-card-content>
-			<md-content class="md-no-momentum">
-				<md-content layout="row">
-					<md-input-container class="md-icon-float md-block" flex>
-						<label>Nombres</label>
-						<md-icon md-svg-icon="account"></md-icon>
-						<input ng-model="vm.profile.firstName" type="text" >
+			<form name="createForm" novalidate>
+				<md-content class="md-no-momentum">
+					<md-content layout="row">
+						<md-input-container class="md-icon-float md-block" flex>
+							<label>Nombres</label>
+							<md-icon md-svg-icon="account"></md-icon>
+							<input ng-model="vm.profile.firstName" type="text" required>
+						</md-input-container>
+						<md-input-container class="md-icon-float md-block" flex>
+							<label>Apellidos</label>
+							<md-icon md-svg-icon=""></md-icon>
+							<input ng-model="vm.profile.lastName" type="text" required>
+						</md-input-container>
+					</md-content>
+					<md-input-container class="md-icon-float md-block">
+						<label>Correo</label>
+						<md-icon md-svg-icon="email"></md-icon>
+						<input ng-model="vm.profile.email" type="email" required>
 					</md-input-container>
-					<md-input-container class="md-icon-float md-block" flex>
-						<label>Apellidos</label>
-						<md-icon md-svg-icon=""></md-icon>
-						<input ng-model="vm.profile.lastName">
+					<md-input-container class="md-icon-float md-block">
+						<label>Celular</label>
+						<md-icon md-svg-icon="phone"></md-icon>
+						<input ng-model="vm.profile.phone" type="text" required>
 					</md-input-container>
+					<md-input-container class="md-icon-float md-block">
+						<label>Genero</label>
+						<md-icon md-svg-icon="gender"></md-icon>
+						<md-select ng-model="vm.profile.gender" required>
+							<md-option ng-value="gender.id" ng-repeat="gender in vm.genders">
+								{{gender.name}}
+							</md-option>
+						</md-select>
+					</md-input-container>
+					<md-input-container class="md-icon-float md-block">
+						<label>Dirección</label>
+						<md-icon md-svg-icon="map"></md-icon>
+						<input ng-model="vm.profile.address" type="text" required>
+					</md-input-container>
+					<md-content layout="row">
+						<md-input-container class="md-icon-float md-block" flex>
+								<label>Nombre de usuario</label>
+								<md-icon md-svg-icon="account"></md-icon>
+								<input ng-model="vm.profile.username" type="text" required>
+							</md-input-container>
+						<md-input-container class="md-icon-float md-block" flex>
+							<label>Contraseña</label>
+							<md-icon md-svg-icon="key"></md-icon>
+							<input type="password" ng-model="vm.profile.password" md-maxlength="15" md-minlength="5" required>
+						</md-input-container>
+					</md-content>
+					<md-content layout="row">
+						<md-checkbox ng-model="vm.profile.admin" ng-false-value="false">
+						<span>¿Administrador?</span>
+					</md-content>
+					
+					<md-button class="md-raised" ng-disabled="createForm.$invalid" ng-click="vm.registerUser()">Registrar</md-button>
 				</md-content>
-				<md-input-container class="md-icon-float md-block">
-					<label>Correo</label>
-					<md-icon md-svg-icon="email"></md-icon>
-					<input ng-model="vm.profile.email" type="text">
-				</md-input-container>
-				<md-input-container class="md-icon-float md-block">
-					<label>Celular</label>
-					<md-icon md-svg-icon="phone"></md-icon>
-					<input ng-model="vm.profile.phone" type="text">
-				</md-input-container>
-				<md-input-container class="md-icon-float md-block">
-					<label>Genero</label>
-					<md-icon md-svg-icon="gender"></md-icon>
-					<md-select ng-model="vm.profile.gender">
-						<md-option ng-value="gender.id" ng-repeat="gender in vm.genders">
-							{{gender.name}}
-						</md-option>
-					</md-select>
-				</md-input-container>
-				<md-input-container class="md-icon-float md-block">
-					<label>Dirección</label>
-					<md-icon md-svg-icon="map"></md-icon>
-					<input ng-model="vm.profile.address" type="text">
-				</md-input-container>
-				<md-content>
-				<md-input-container class="md-icon-float md-block">
-					<label>Contraseña</label>
-					<md-icon md-svg-icon="key"></md-icon>
-					<input type="password" ng-model="vm.profile.password">
-				</md-input-container>
-				<md-button class="md-raised">Registrar</md-button>
-			</md-content>
+			</form>
 		</md-card-content>
 	</md-card>
 </md-content>
