Corrección de maquetación de pantallas

--- a/src/app/demands/demands.html
+++ b/src/app/demands/demands.html
@@ -1,4 +1,4 @@
-﻿<md-content layout-fill>
+﻿<div>
 	<md-toolbar class="md-tall md-whiteframe-4dp md-hue-1">
 		<div class="md-toolbar-tools">
 			<h2>
@@ -44,7 +44,7 @@
 			</md-card-content>
 		</md-card>
 	</md-content>
-	<md-button class="md-fab md-fab-bottom-right" style="position: fixed" aria-label="FAB" ng-click="vm.openCreateDialog($event)">
+	<md-button class="md-fab md-fab-bottom-right" aria-label="FAB" ng-click="vm.openCreateDialog($event)">
 		<md-icon md-svg-icon="add"></md-icon>
 	</md-button>
-</md-content>
+</div>
