--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,7 +1,7 @@
-﻿<md-content id="background">
+﻿<div id="background">
   <p>A la Orden!</p>
   <div>
     <div class="inLine">Buscar</div>
     <div class="inLine">Oferta</div>
   </div>
-</md-content>
+</div>
