--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -31,6 +31,8 @@
 				</md-button>
 			</div>
 		</md-toolbar>
-		<md-content ng-view></md-content>
+		<div flex layout="row">
+			<md-content ng-view flex></md-content>
+		</div>
 	</md-content>
 </md-content>
