--- a/src/app/user/registerUser.html
+++ b/src/app/user/registerUser.html
@@ -1,4 +1,4 @@
-﻿<md-content>
+﻿<div>
 	<md-toolbar class="md-tall md-whiteframe-4dp md-hue-1">
 		<div class="md-toolbar-tools">
 			<h2>
@@ -69,4 +69,4 @@
 			</form>
 		</md-card-content>
 	</md-card>
-</md-content>
+</div>
