Ajustes de conexión de login con backend

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -10,8 +10,8 @@
 	<md-card layout="row" layout-sm="column" layout-align="center center" layout-wrap="">
 		<md-card-content>
 			<md-input-container class="md-block">
-				<label>Correo</label>
-				<input ng-model="vm.userData.email">
+				<label>Nombre de usuario</label>
+				<input ng-model="vm.userData.username">
 			</md-input-container>
 
 			<md-input-container class="md-block">
