--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,4 @@
-﻿<md-content class="fill-height" layout="row" ng-controller="MainController as MainCtrl">
+﻿<md-content layout-fill layout="row" ng-controller="MainController as MainCtrl">
 	<md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
 		<md-toolbar class="md-whiteframe-4dp md-tall">
 			<h1 class="md-toolbar-tools">Usuario</h1>
