--- a/src/app/offer/create/create_offer.html
+++ b/src/app/offer/create/create_offer.html
@@ -10,47 +10,49 @@
 	</md-toolbar>
 	<form name="createForm" novalidate>
 		<md-dialog-content>
-			<md-input-container>
-				<label>Titulo</label>
-				<input name="title" id="title" ng-model="vm.offer.title" ng-required="true" md-maxlength="50" md-minlength="5">
-				<div ng-messages="createForm.title.$error" ng-if="createForm.title.$dirty">
-					<div ng-message="required">Por favor ingrese el titulo de la demanda.</div>
-				</div>
-			</md-input-container>
-			<md-input-container>
-				<label>Descripción</label>
-				<input name="description" id="description" ng-model="vm.offer.description" ng-required="true">
-				<div ng-messages="createForm.description.$error" ng-if="createForm.description.$dirty">
-					<div ng-message="required">Por favor ingrese la descripción de la demanda.</div>
-				</div>
-			</md-input-container>
-			<md-content layout="row" flex>
-				<md-input-container class="md-block" flex>
-					<label>Latitud</label>
-					<input ng-model="vm.profile.latitude" type="text" required>
+			<md-content class="md-padding">
+				<md-input-container class="md-block">
+					<label>Titulo</label>
+					<input name="title" id="title" ng-model="vm.offer.title" ng-required="true" md-maxlength="50" md-minlength="5">
+					<div ng-messages="createForm.title.$error" ng-if="createForm.title.$dirty">
+						<div ng-message="required">Por favor ingrese el titulo de la demanda.</div>
+					</div>
 				</md-input-container>
-				<md-input-container class="md-block" flex>
-					<label>Longitud</label>
-					<input ng-model="vm.profile.longitude" type="text" required>
+				<md-input-container class="md-block">
+					<label>Descripción</label>
+					<input name="description" id="description" ng-model="vm.offer.description" ng-required="true">
+					<div ng-messages="createForm.description.$error" ng-if="createForm.description.$dirty">
+						<div ng-message="required">Por favor ingrese la descripción de la demanda.</div>
+					</div>
 				</md-input-container>
+				<md-content layout="row" flex>
+					<md-input-container class="md-block" flex>
+						<label>Latitud</label>
+						<input ng-model="vm.profile.latitude" type="text" required>
+					</md-input-container>
+					<md-input-container class="md-block" flex>
+						<label>Longitud</label>
+						<input ng-model="vm.profile.longitude" type="text" required>
+					</md-input-container>
+				</md-content>
+				<md-input-container class="md-block">
+					<label>Precio</label>
+					<input name="price" id="price" ng-model="vm.offer.price" ng-required="true">
+					<div ng-messages="createForm.price.$error" ng-if="createForm.price.$dirty">
+						<div ng-message="required">Por favor ingrese el precio de la demanda.</div>
+					</div>
+				</md-input-container>
+				<md-input-container class="md-block">
+					<label>Fecha máxima</label>
+					<input name="deadline" id="deadline" ng-model="vm.offer.deadline" ng-required="true">
+					<div ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
+						<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
+					</div>
+				</md-input-container>
+				
+				<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
+				<md-button ng-click="vm.createOffer()" class="md-primary" ng-disabled="createForm.$invalid">Crear</md-button>
 			</md-content>
-			<md-input-container>
-				<label>Precio</label>
-				<input name="price" id="price" ng-model="vm.offer.price" ng-required="true">
-				<div ng-messages="createForm.price.$error" ng-if="createForm.price.$dirty">
-					<div ng-message="required">Por favor ingrese el precio de la demanda.</div>
-				</div>
-			</md-input-container>
-			<md-input-container class="md-block">
-				<label>Fecha máxima</label>
-				<input name="deadline" id="deadline" ng-model="vm.offer.deadline" ng-required="true">
-				<div ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
-					<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
-				</div>
-			</md-input-container>
-			
-			<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
-			<md-button ng-click="vm.createOffer()" class="md-primary" ng-disabled="createForm.$invalid">Crear</md-button>
 		</md-dialog-content>
 	</form>
 </md-dialog>
