--- a/src/app/offer/create/create_offer.html
+++ b/src/app/offer/create/create_offer.html
@@ -28,27 +28,29 @@
 				<md-content layout="row" flex>
 					<md-input-container class="md-block" flex>
 						<label>Latitud</label>
-						<input ng-model="vm.profile.latitude" type="text" required>
+						<input ng-model="vm.offer.latitude" type="text" required>
 					</md-input-container>
 					<md-input-container class="md-block" flex>
 						<label>Longitud</label>
-						<input ng-model="vm.profile.longitude" type="text" required>
+						<input ng-model="vm.offer.longitude" type="text" required>
 					</md-input-container>
 				</md-content>
 				<md-input-container class="md-block">
 					<label>Precio</label>
-					<input name="price" id="price" ng-model="vm.offer.price" ng-required="true">
+					<input name="price" id="price" ng-model="vm.offer.price" type="number" ng-required="true">
 					<div ng-messages="createForm.price.$error" ng-if="createForm.price.$dirty">
 						<div ng-message="required">Por favor ingrese el precio de la demanda.</div>
 					</div>
 				</md-input-container>
-				<md-input-container class="md-block">
-					<label>Fecha máxima</label>
-					<input name="deadline" id="deadline" ng-model="vm.offer.deadline" ng-required="true">
-					<div ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
-						<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
-					</div>
-				</md-input-container>
+				<div class="md-block">
+					<md-datepicker name="deadline" ng-model="vm.offer.deadline" md-placeholder="Fecha máxima" required></md-datepicker>
+					</br>
+					<md-input-container>
+						<div class="validation-messages" ng-messages="createForm.deadline.$error" ng-if="createForm.deadline.$dirty">
+							<div ng-message="required">Por favor ingrese fecha máxima de la demanda.</div>
+						</div>
+					</md-input-container>
+				</div>
 				
 				<md-button ng-click="vm.closeDialog()" class="md-primary">Cancelar</md-button>
 				<md-button ng-click="vm.createOffer()" class="md-primary" ng-disabled="createForm.$invalid">Crear</md-button>
