--- a/src/app/user/registerUser.html
+++ b/src/app/user/registerUser.html
@@ -6,22 +6,37 @@
 			</h2>
 		</div>
 	</md-toolbar>
-	
+	<form name="createForm" novalidate>
+
 	<md-card>
 		<md-card-content>
 			<form name="createForm" novalidate>
 				<md-content class="md-no-momentum">
 					<md-content layout="row">
+
 						<md-input-container class="md-icon-float md-block" flex>
 							<label>Nombres</label>
+
+							<input name="firstName" id="firstName" ng-model="vm.profile.firstName" type="text" ng-required="true">
+
+							<div ng-messages="createForm.firstName.$error" ng-if="createForm.firstName.$dirty">
+								<div ng-message="required">Su nombre debe tener almenos 1 caracter .</div>
+							</div>
+
 							<md-icon md-svg-icon="account"></md-icon>
-							<input ng-model="vm.profile.firstName" type="text" required>
 						</md-input-container>
+
 						<md-input-container class="md-icon-float md-block" flex>
 							<label>Apellidos</label>
+
+							<input name="lastName" id="lastName" ng-model="vm.profile.lastName" type="text" ng-required="true">
+							<div ng-messages="createForm.lastName.$error" ng-if="createForm.lastName.$dirty">
+								<div ng-message="required">Su apellido debe tener almenos 1 caracter .</div>
+							</div>
+
 							<md-icon md-svg-icon=""></md-icon>
-							<input ng-model="vm.profile.lastName" type="text" required>
 						</md-input-container>
+
 					</md-content>
 					<md-input-container class="md-icon-float md-block">
 						<label>Correo</label>
@@ -71,4 +86,5 @@
 			</form>
 		</md-card-content>
 	</md-card>
+	</form>
 </div>
