--- a/src/app/demands/create/create_demand.html
+++ b/src/app/demands/create/create_demand.html
@@ -28,11 +28,17 @@
 				<md-content layout="row" flex>
 					<md-input-container class="md-block" flex>
 						<label>Latitud</label>
-						<input ng-model="vm.profile.latitude" type="text" required>
+						<input name="latitude" id="latitude" ng-model="vm.demand.latitude" type="text" ng-required="true">
+							<div ng-messages="createForm.latitude.$error" ng-if="createForm.latitude.$dirty">
+								<div ng-message="required">Por favor ingrese la latitud de su vivienda.</div>
+							</div>
 					</md-input-container>
 					<md-input-container class="md-block" flex>
 						<label>Longitud</label>
-						<input ng-model="vm.profile.longitude" type="text" required>
+						<input name="longitude" id="longitude" ng-model="vm.demand.longitude" type="text" ng-required="true">
+							<div ng-messages="createForm.longitude.$error" ng-if="createForm.longitude.$dirty">
+								<div ng-message="required">Por favor ingrese la longitud de su vivienda.</div>
+							</div>
 					</md-input-container>
 				</md-content>
 				<md-input-container class="md-block">
